<resources>
    <string name="app_name">SendMe</string>

    <!-- Menu Strings -->
    <string name="menu_title_following_settings">Following</string>

    <!-- Message and Notification Strings -->
    <string name="notification_message">"New squawk from %1$s"</string>
    <string name="toast_refresh">Refreshing Data</string>
    <string name="message_token_format" translatable="false">InstanceID Token: %s</string>

    <!-- Strings for Following Screen -->
    <string name="follow_key_switch_asser">key_asser</string>
    <string name="follow_key_switch_cezanne">key_cezanne</string>
    <string name="follow_key_switch_jlin">key_jlin</string>
    <string name="follow_key_switch_lyla">key_lyla</string>
    <string name="follow_key_switch_nikita">key_nikita</string>

    <string name="follow_title_switch_asser">Asser</string>
    <string name="follow_title_switch_cezanne">Cezanne</string>
    <string name="follow_title_switch_jlin">Jessica</string>
    <string name="follow_title_switch_lyla">Lyla</string>
    <string name="follow_title_switch_nikita">Nikita</string>

    <string name="follow_summary_not_following">Not Following</string>
    <string name="follow_summary_following">Following</string>
</resources>
