<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_height="match_parent" android:layout_width="match_parent">

    <SwitchPreferenceCompat
        android:defaultValue="@bool/follow_default_message_subscription"
        android:key="@string/follow_key_switch_asser"
        android:icon="@drawable/ic_face_1"
        android:summaryOff="@string/follow_summary_not_following"
        android:summaryOn="@string/follow_summary_following"
        android:title="@string/follow_title_switch_asser" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/follow_default_message_subscription"
        android:key="@string/follow_key_switch_cezanne"
        android:icon="@drawable/ic_face_2"
        android:summaryOff="@string/follow_summary_not_following"
        android:summaryOn="@string/follow_summary_following"
        android:title="@string/follow_title_switch_cezanne" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/follow_default_message_subscription"
        android:key="@string/follow_key_switch_jlin"
        android:icon="@drawable/ic_face_3"
        android:summaryOff="@string/follow_summary_not_following"
        android:summaryOn="@string/follow_summary_following"
        android:title="@string/follow_title_switch_jlin" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/follow_default_message_subscription"
        android:key="@string/follow_key_switch_lyla"
        android:icon="@drawable/ic_face_4"
        android:summaryOff="@string/follow_summary_not_following"
        android:summaryOn="@string/follow_summary_following"
        android:title="@string/follow_title_switch_lyla" />

    <SwitchPreferenceCompat
        android:defaultValue="@bool/follow_default_message_subscription"
        android:key="@string/follow_key_switch_nikita"
        android:icon="@drawable/ic_face_5"
        android:summaryOff="@string/follow_summary_not_following"
        android:summaryOn="@string/follow_summary_following"
        android:title="@string/follow_title_switch_nikita" />

</PreferenceScreen>
